--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-
 
     <style>
       body {
@@ -92,17 +86,10 @@
         box-sizing: border-box;
     }
 
-    .l-box {
-        padding-right: 3em;
-    }
-
-    .pure-g {
-    }
-
     #posts h2 {
       font-weight: normal;
       font-size: 20pt;
-      font-family: Quando, serif;
+      font-family: 'PT Sans', sans-serif;
       color: #333;
     }
 
